--- a/css/style-common.css
+++ b/css/style-common.css
@@ -844,3 +844,59 @@ div.feedback-panel .btn {
    float: none;
 }
 
+/**
+ * Modal
+ */
+.modal-fullscreen {
+    padding: 3% 5% !important;
+}
+
+.modal-fullscreen .container {
+    max-width: 100%;
+}
+
+.modal-fullscreen .modal-dialog {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.modal-fullscreen .modal-content {
+    height: auto;
+    min-height: 100%;
+    border: 0 none;
+    border-radius: 0;
+    box-shadow: none;
+}
+
+.modal-fullscreen button.close {
+    font-size: 26px;
+    top: 3px;
+    right: 15px;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.modal-fullscreen .modal-header {
+    border-bottom: 0;
+    background-color: #1976d2;
+    display: block !important;
+    padding: 10px 0;
+}
+
+.modal-fullscreen button.close:hover {
+    background-color: transparent;
+    opacity: 1;
+}
+
+.modal .ais-SearchBox .ais-SearchBox-input {
+    width: 100%;
+    border-radius: 4px;
+    display: inline-block;
+}
+
+.modal .ais-SearchBox-submit {
+    position: absolute;
+    right: 10px;
+}
