css icon updates

--- a/css/5ed812b1d0de0.css
+++ b/css/5ed812b1d0de0.css
@@ -15,3 +15,16 @@
 .featured-content-label {
 	display: none;
 }
+
+.cat-panel-1:before{
+    content: "\f14b"; 
+}
+
+.cat-panel-2:before{
+    content: "\f0d6"; 
+}
+
+.cat-panel-3:before{
+    content: "\f0c0"; 
+}
+
