css icon finalize

--- a/css/5ed812b1d0de0.css
+++ b/css/5ed812b1d0de0.css
@@ -15,3 +15,15 @@
 .featured-content-label {
 	display: none;
 }
+
+.cat-panel-1:before{
+    content: "\f0e0"; 
+}
+
+.cat-panel-2:before{
+    content: "\f0d6"; 
+}
+
+.cat-panel-3:before{
+    content: "\f007"; 
+}
